# loop10

./: .gitignore
.github/workflows/: build-windows.yml
desktop/: CMakeLists.txt  loop10.rc  main.mm  main_win.cpp  platform_common.cpp  platform_common.hpp
desktop/icons/: loop10.icns
scripts/: build-release.sh  download-deps.sh  setup-vendor.sh
ui/: index.html  scene.js  style.css
ui/lib/: PointerLockControls.js
